# dietary-exposure-mcp

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  dietary_mcp_prd.md  pyproject.toml  test_server.py  toxmcp_boundary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  scientific-correction.yml
.github/workflows/: scientific-invariants.yml  (+3 more)
defaults/: manifest.json
docs/: acute_vs_chronic_guide.md  adapter_import_walkthroughs.md  analytical_method_evidence_registry.md  applicability_limits.md  contaminant_monitoring_import.md  contaminant_monitoring_interpretation.md  contaminant_monitoring_signoff.md  extension_hooks.md  food_vocabulary_crosswalk.md  interoperability_preview.md  interoperability_remediation.md  interoperability_signoff.md  metals_monitoring_interpretation.md  metals_monitoring_review_dossier.md  metals_monitoring_signoff.md  metals_review_focus_registry.md  regulatory_governance.md  regulatory_source_databases.md  release_checklist.md  release_readiness.md  reporting_profiles_registry.md  scientific_follow_up_owner_remediation.md  scientific_follow_up_owner_signoff_dossier.md  scientific_follow_up_review_board.md  validation_framework.md
evals/: dietary_mcp_readonly.xml
scripts/: __init__.py  generate_deep_review_concat.py  generate_dietary_woe_roundtrip_bundle.py  generate_governance_corpus.py  generate_utrecht_diet_report.py  ingest_eu_mrls.py  ingest_openfoodtox_reference_values.py  normalize_sdist.py  openfoodtox3_candidates.py  openfoodtox3_extract.py  openfoodtox3_inventory.py  openfoodtox3_reconcile.py  public_release_audit.py  scientific_invariants_gate.py  vendor_verify.py  verify_distribution_public_files.py  verify_openfoodtox3_migration.py  verify_release.sh
tests/: conftest.py  test_adapter_harness.py  test_adapter_validation.py  test_adapter_walkthroughs.py  test_benchmarks.py  test_contaminant_monitoring_bundle_validation.py  test_contaminant_monitoring_review_dossier_validation.py  test_contaminant_monitoring_signoff_validation.py  test_contaminant_monitoring_validation.py  test_contracts.py  test_core_math.py  test_defaults.py  test_distribution_public_files.py  test_food_vocabulary_validation.py  test_integrations.py  test_interoperability_readiness_validation.py  test_interoperability_remediation_validation.py  test_interoperability_signoff_validation.py  test_interoperability_validation.py  test_mcp_conformance.py  test_metals_monitoring_review_dossier_validation.py  test_metals_monitoring_signoff_validation.py  test_metals_monitoring_validation.py  test_openfoodtox3_candidates.py  test_openfoodtox3_extract.py  test_openfoodtox3_inventory.py  test_openfoodtox3_migration_verifier.py  test_openfoodtox3_reconcile.py  test_openfoodtox_snapshot.py  test_packaged_assets.py  test_pess_glyphosate_case_pack.py  test_probabilistic_intake_summary_validation.py  test_public_release_materials.py  test_readiness_validation.py  test_reference_validation.py  test_regressions.py  test_release_artifacts.py  test_release_normalization.py  test_runtime.py  test_sanitisation_validation.py  (+15 more)
(+474 files in other folders)
