[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dietary-mcp"
version = "0.1.0"
description = "Dietary MCP for deterministic food-residue to oral intake workflows"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "ToxMCP" }]
keywords = ["MCP", "dietary exposure", "food safety", "toxicology", "risk assessment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "mcp[cli]>=1.28.1,<2.0.0",
  # mcp[cli] depends on Click. Keep the patched floor explicit so downstream
  # installs cannot resolve to PYSEC-2026-2132 / CVE-2026-7246 affected builds.
  "click>=8.3.3,<9.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "scipy>=1.14,<2.0",
  # Transitive via mcp[crypto] -> pyjwt[crypto]. Pin to the OpenSSL-patched
  # line (GHSA-537c-gmf6-5ccf, statically linked OpenSSL secadv 20260609).
  "cryptography>=48.0.1",
  # HTTP transport (streamable-HTTP entrypoint).
  "uvicorn[standard]>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/ToxMCP/dietary-exposure-mcp"
Repository = "https://github.com/ToxMCP/dietary-exposure-mcp"
Documentation = "https://github.com/ToxMCP/dietary-exposure-mcp/tree/main/docs"
Issues = "https://github.com/ToxMCP/dietary-exposure-mcp/issues"
Security = "https://github.com/ToxMCP/dietary-exposure-mcp/security/policy"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
dietary-mcp = "dietary_mcp.__main__:main"
dietary-mcp-http = "dietary_mcp.transport.http:main"
dietary-mcp-generate-artifacts = "dietary_mcp.contracts:main"
dietary-mcp-validate = "dietary_mcp.validation:main"
dietary-mcp-write-release-reports = "dietary_mcp.release_artifacts:main"
dietary-mcp-generate-public-seeds = "dietary_mcp.regulatory_seeds:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dietary_mcp = [
  "data/config/*.json",
  "data/defaults/extensions/README.md",
  "data/defaults/extensions/v1/*/*.json",
  "data/defaults/v1/*.json",
  "data/docs/*.md",
  "data/evals/*.xml",
  "data/templates/adapter_inputs/*.csv",
  "data/templates/adapter_inputs/*.json",
  "data/validation/v1/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "contract: marks tests that generate/validate contract artifacts",
    "integration: marks tests that integrate multiple subsystems",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytest-xdist>=3.6.0",
    "xlrd>=2.0.2",
]
release = [
  "bandit>=1.8,<2.0",
  "cyclonedx-bom>=7.0,<8.0",
  "pip-audit>=2.9,<3.0",
  "pyyaml>=6.0,<7.0",
  "twine>=6.0,<7.0",
]
